# fidelius

./: .envrc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  private.asc  setup.cfg  tox.ini
examples/: example-1.encrypted.json.asc
examples/directory/: normal.json
examples/directory.encrypted/: example-2.json.asc  example-3.encrypted.json.asc
fidelius/: __init__.py  __main__.py  api.py  cli.py  gpg.py  incantations.py  secrets.py  spells.py  utils.py
tests/: README.md  conftest.py  public.asc  test_decrypt.py  test_help.py  test_ls.py  test_view.py
tests/files.encrypted/subdirectory/: subdir-gpg.json.gpg
