[metadata]
name = fidelius
version = attr: fidelius.__version__
description = attr: fidelius.__doc__
long_description = file: README.md, LICENSE
author = attr: fidelius.__author__
author_email = attr: fidelius.__author_email__
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    attrs>=18.2.0
    click>=7.0
    gitpython>=2.1.11

[options.entry_points]
console_scripts =
    fidelius = fidelius.__main__:main

[bdist_wheel]
python-tag = py37
